feat: update project files - REST API, entities, services, frontend